--- a/src/components/navbar/NavbarStyles.css
+++ b/src/components/navbar/NavbarStyles.css
@@ -1,3 +1,5 @@
+@import "~@fortawesome/fontawesome-free/css/all.css";
+
 .Head {
   background-color: #000000;
   display: flex;
@@ -26,11 +28,11 @@
   width: 95%;
   height: 100px;
   position: absolute;
-  z-index: 9999;
+  z-index: 999;
 }
 
 .navbar-logo {
-  color: #ffffff;
+  color: #1e00ff;
   font-size: 1rem;
   cursor: pointer;
   padding-top: 100px;
@@ -43,6 +45,7 @@
   grid-gap: 10px;
   list-style: none;
   align-items: center;
+  color: white;
 }
 .nav-links {
   text-decoration: none;
@@ -51,6 +54,7 @@
   font-weight: 600;
   padding: 0.7rem 1rem;
   white-space: nowrap;
+  cursor: pointer;
 }
 
 .nav-links i {
@@ -59,7 +63,7 @@
 
 .nav-links:hover {
   background-color: #ffffff;
-  color: hsl(0, 0%, 100%);
+  color: hsl(250, 100%, 50%);
   border-radius: 4px;
   transition: all 0.2s ease-in-out;
 }
@@ -77,6 +81,7 @@ button {
   border: none;
   cursor: pointer;
   transition: 0.2s ease-in-out;
+  color: white;
 }
 
 .button:hover {
@@ -100,6 +105,7 @@ button {
   .navbar-logo {
     padding-right: 30px;
     padding-top: 30px;
+    z-index: 1000;
   }
 
   .NavbarItems {
@@ -110,30 +116,31 @@ button {
     flex-direction: column;
     justify-content: flex-start;
     background: #636363;
-    width: 100%;
+    width: 70%;
     height: auto;
     position: absolute;
     top: 0;
-    left: -100%;
+    left: 0%;
     opacity: 0;
     align-items: stretch;
-    padding: 90px 80px 10px 0;
+    padding: 95px 10px 10px 0;
     margin: 0;
     transition: 0.3s ease-in-out;
     border-radius: 13px;
   }
 
   .nav-menu.active {
-    left: 0;
+    left: 1;
     opacity: 1;
-    z-index: -1;
+    z-index: 999;
+    color: white;
   }
 
   .nav-links {
     display: block;
     width: 100%;
-    font-size: 1.2rem;
-    padding: 2rem 0;
+    font-size: 1rem;
+    padding: 1rem 0;
   }
   .nav-links:hover {
     background: #000000;
@@ -157,7 +164,9 @@ button {
 
   .menu-icons {
     display: block;
+    color: white;
     cursor: pointer;
+    z-index: 9999;
   }
   .menu-icons i {
     font-size: 1.5rem;
@@ -214,6 +223,7 @@ button {
     left: 0;
     opacity: 1;
     z-index: -1;
+    color: white;
   }
 
   .nav-links {
