--- a/src/components/navbar/NavbarStyles.css
+++ b/src/components/navbar/NavbarStyles.css
@@ -11,9 +11,10 @@
   left: 50%;
 }
 .HeadLogo {
-  color: #0008ff;
+  color: #0095ff;
   font-size: 2rem;
   cursor: pointer;
+  border-color: #3a00f9;
 }
 .HeadNumber {
   color: #fff;
@@ -32,7 +33,7 @@
 }
 
 .navbar-logo {
-  color: #1e00ff;
+  color: #39baff;
   font-size: 1rem;
   cursor: pointer;
   padding-top: 100px;
@@ -45,7 +46,7 @@
   grid-gap: 10px;
   list-style: none;
   align-items: center;
-  color: white;
+  color: #0095ff;
 }
 .nav-links {
   text-decoration: none;
@@ -63,7 +64,7 @@
 
 .nav-links:hover {
   background-color: #ffffff;
-  color: hsl(250, 100%, 50%);
+  color: #0095ff;
   border-radius: 4px;
   transition: all 0.2s ease-in-out;
 }
@@ -115,7 +116,7 @@ button {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    background: #636363;
+    background: #44769a;
     width: 70%;
     height: auto;
     position: absolute;
@@ -133,7 +134,7 @@ button {
     left: 1;
     opacity: 1;
     z-index: 999;
-    color: white;
+    color: #0095ff;
   }
 
   .nav-links {
@@ -164,13 +165,14 @@ button {
 
   .menu-icons {
     display: block;
-    color: white;
+    color: #0095ff;
     cursor: pointer;
     z-index: 9999;
   }
+
   .menu-icons i {
     font-size: 1.5rem;
-    color: #ffffff;
+    color: #0095ff;
     padding-left: 70px;
   }
 }
@@ -205,7 +207,7 @@ button {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    background: #636363;
+    background: #4c7a9b;
     width: 100%;
     height: auto;
     position: absolute;
