--- a/src/components/features/ServiceStyles.css
+++ b/src/components/features/ServiceStyles.css
@@ -1,6 +1,6 @@
 .title {
   font-size: 1.5rem;
-  color: #0022ff;
+  color: #0095ff;
   padding-top: 20px;
   background-color: #2d2d2f;
   padding-bottom: 20px;
@@ -46,11 +46,11 @@
 
 .services h1 {
   font-size: 2rem;
-  color: #1500fd;
+  color: #4b92c5;
 }
 
 .services h2 {
-  color: #000dff;
+  color: #0095ff;
   padding-bottom: 20px;
   font-size: 1.5rem;
 }
@@ -69,13 +69,13 @@
   width: 50%;
   text-align: start;
   font-size: 0.9rem;
-  color: #0800ff;
+  color: #4b92c5;
   padding-left: 20px;
 }
 
 .serv-text h2 {
   padding-bottom: 1rem;
-  color: rgb(30, 0, 255);
+  color: #0095ff;
   text-align: center;
   width: 100%;
 }
@@ -110,6 +110,7 @@
   .title {
     font-size: 1rem;
     border-radius: 30px;
+    color: #4b92c5;
   }
 
   .services {
