--- a/src/components/reviews/Reviews.css
+++ b/src/components/reviews/Reviews.css
@@ -3,8 +3,10 @@
   margin-bottom: 30px;
 }
 
-.reviews-container a {
+.reviews-container h2 {
   padding-top: 30px;
+  font-size: 20px;
+  color: #0095ff;
 }
 
 .title p {
@@ -21,8 +23,8 @@
   padding: 15px;
 }
 .review-profile img {
-  width: 60px;
-  height: 60px;
+  width: 80%;
+  height: 80%;
   border-radius: 50%;
 }
 
@@ -108,7 +110,7 @@
 .review-details {
   display: flex;
   flex-direction: column;
-  color: #00ff11;
+  color: #4b92c5;
   align-items: center;
 }
 .review-details p {
@@ -118,7 +120,7 @@
 
 .review h2 {
   margin: 0;
-  color: rgb(13, 255, 0);
+  color: #4b92c5;
   align-items: center;
 }
 
@@ -193,19 +195,28 @@
 }
 
 @media (max-width: 768px) {
+  .title h1 {
+    color: #0095ff;
+    font-size: 27px;
+  }
+
+  .title p {
+    color: #fff;
+    font-size: 20px;
+  }
+
   .reviews-list {
     display: flex;
     flex-direction: column;
-    gap: 50px;
-    margin-top: 40px;
-    margin-left: -20px;
-    margin-right: -20px;
+    margin-top: 20px;
+    margin-left: -50px;
+    margin-right: -50px;
   }
 
   .pagination {
     margin-top: 3rem;
-    margin-left: 0rem;
-    margin-right: 0rem;
+    margin-left: 1.3rem;
+    margin-right: 1.3rem;
   }
 
   .review {
@@ -221,8 +232,9 @@
   }
 
   .review-profile img {
-    width: 80px;
-    height: 80px; /* Add spacing between profile and header */
+    margin-top: 25px;
+    width: 120px;
+    height: 120px; /* Add spacing between profile and header */
   }
 
   .review-details {
