--- a/src/components/gallery/Gallery.css
+++ b/src/components/gallery/Gallery.css
@@ -17,7 +17,7 @@
 }
 
 body {
-  font-size: 1.6rem;
+  font-size: 1rem;
   background: var(--bg);
 }
 
@@ -25,7 +25,7 @@ body {
   max-width: 124rem;
   padding: 2rem 1rem;
   margin: 0 auto;
-  zoom: 60.5%;
+  zoom: 80.5%;
 }
 
 .heading {
@@ -49,9 +49,9 @@ body {
   border-color: #0095ff;
 }
 
-@media screen and (max-width: 2778px) {
+@media screen and (max-width: 850px) {
   .galleryContainer {
-    zoom: 55%;
+    zoom: 50%;
   }
 }
 
@@ -129,7 +129,7 @@ body {
   border-radius: 60%;
   left: 52%;
   transform: translateX(-52%);
-  filter: drop-shadow(0px 8px 24px rgba(0, 0, 0, 0.1));
+  filter: drop-shadow(0px 8px 24px rgba(255, 252, 252, 0.1));
 }
 
 .slider-controler .slider-arrow ion-icon {
@@ -148,12 +148,12 @@ body {
 }
 
 .swiper-pagination .swiper-pagination-bullet {
-  filter: drop-shadow(0px 8px 24px rgba(255, 255, 255, 0.1));
+  filter: drop-shadow(0px 8px 24px rgba(255, 0, 0, 0.1));
 }
 
 .swiper-pagination .swiper-pagination-bullet-active {
   background: var(--primary);
-  color: #fff;
+  color: #ff0000;
 }
 
 .revealLeft {
