--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,29 @@
   font-family: "Poppins", sans-serif;
 }
 
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+
+@media (min-width: 1440px) {
+  html {
+    zoom: 1.5;
+  }
+}
+
+@media (min-width: 2560px) {
+  html {
+    zoom: 1.7;
+  }
+}
+
+@media (min-width: 3860px) {
+  html {
+    zoom: 2.5;
+  }
+}
+
 .App {
   height: auto;
   text-align: center;
