--- a/src/components/gallery/Gallery.css
+++ b/src/components/gallery/Gallery.css
@@ -27,6 +27,13 @@ body {
   margin: 0 auto;
   font-size: 62.5%;
   scroll-behavior: smooth;
+  zoom: 80%;
+}
+
+@media (max-width: 850px) {
+  .galleryContainer {
+    zoom: 50%;
+  }
 }
 
 .heading {
@@ -39,6 +46,7 @@ body {
   height: 50rem;
   padding: 2rem 0;
   position: relative;
+  font-size: 62.5%;
 }
 
 .swiper-slide {
