--- a/src/components/gallery/Gallery.css
+++ b/src/components/gallery/Gallery.css
@@ -17,23 +17,45 @@
 }
 
 body {
-  font-size: 1rem;
+  font-size: 1.4rem;
   background: var(--bg);
 }
 
 .galleryContainer {
   max-width: 124rem;
   padding: 2rem 1rem;
-  margin: 0 auto;
+  margin: 15px;
   font-size: 62.5%;
   scroll-behavior: smooth;
 }
 
-html {
-  @media (max-width: 850px) {
+/*@media (max-width: 850px) {
     .galleryContainer {
       zoom: 50%;
     }
+  }
+*/
+
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+
+@media (min-width: 1440px) {
+  html {
+    zoom: 1.5;
+  }
+}
+
+@media (min-width: 2560px) {
+  html {
+    zoom: 1.7;
+  }
+}
+
+@media (min-width: 3860px) {
+  html {
+    zoom: 2.5;
   }
 }
 
