--- a/src/components/gallery/Gallery.css
+++ b/src/components/gallery/Gallery.css
@@ -26,7 +26,9 @@ body {
   padding: 2rem 1rem;
   margin: 15px;
   scroll-behavior: smooth;
-  zoom: 80%;
+  zoom: 50%;
+  font-size: 62.5%;
+  align-items: center;
 }
 
 @media (max-width: 850px) {
