--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -30,10 +30,11 @@
 .about-text h1 {
   color: #0095ff;
   text-align: center;
+  font-size: 2rem;
 }
 .about-text p {
   font-display: flex;
-  font-size: 19px;
+  font-size: 12px;
 }
 
 .about-photo {
