--- a/src/components/features/ServiceStyles.css
+++ b/src/components/features/ServiceStyles.css
@@ -1,5 +1,5 @@
 .title {
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: #0095ff;
   padding-top: 20px;
   background-color: #2d2d2f;
@@ -62,13 +62,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 1.5rem;
+  margin-top: 3.5rem;
 }
 
 .serv-text {
   width: 50%;
   text-align: start;
-  font-size: 0.9rem;
+  font-size: 1.5rem;
   color: #4b92c5;
   padding-left: 20px;
 }
@@ -78,6 +78,7 @@
   color: #0095ff;
   text-align: center;
   width: 100%;
+  font-size: 2.5rem;
 }
 
 .serv-text p {
@@ -128,8 +129,10 @@
   }
 
   .serv-text h2 {
-    width: 100%;
-    font-size: 1.1rem;
+    width: 150%;
+    font-size: 2.1rem;
+    padding-right: 12.5rem;
+    padding-left: -2.5rem;
   }
 
   .image {
