--- a/src/components/footer/FooterStyles.css
+++ b/src/components/footer/FooterStyles.css
@@ -49,6 +49,7 @@
   .footer h1 {
     font-size: 0.4rem;
     align-items: flex-start;
+    font-size: 0.6rem;
   }
   .footer h2 {
     font-size: 1rem;
