--- a/src/components/navbar/NavbarStyles.css
+++ b/src/components/navbar/NavbarStyles.css
@@ -7,8 +7,9 @@
   align-items: center;
   padding: 0 40px;
   width: 100%;
-  height: 70px;
+  height: 50px;
   left: 50%;
+  zoom: 150%;
 }
 .HeadLogo {
   color: #0095ff;
@@ -51,7 +52,7 @@
 .nav-links {
   text-decoration: none;
   color: #ffffff;
-  font-size: 1.2 rem;
+  font-size: 1.7rem;
   font-weight: 600;
   padding: 0.7rem 1rem;
   white-space: nowrap;
@@ -96,7 +97,9 @@ button {
 
 @media screen and (max-width: 420px) {
   .Head {
-    padding: 0 10px;
+    padding: 0 8px;
+    align-items: center;
+    height: 50px;
   }
   .HeadLogo {
     font-size: 1rem;
@@ -104,8 +107,8 @@ button {
   }
 
   .navbar-logo {
-    padding-right: 30px;
-    padding-top: 30px;
+    padding-right: 20px;
+    padding-top: 20px;
     z-index: 1000;
   }
 
@@ -140,7 +143,7 @@ button {
   .nav-links {
     display: block;
     width: 100%;
-    font-size: 1rem;
+    font-size: 1.7rem;
     padding: 1rem 0;
   }
   .nav-links:hover {
@@ -171,7 +174,7 @@ button {
   }
 
   .menu-icons i {
-    font-size: 1.5rem;
+    font-size: 3rem;
     color: #0095ff;
     padding-left: 70px;
   }
@@ -190,6 +193,12 @@ button {
 }
 
 @media screen and (min-width: 421px) and (max-width: 850px) {
+  .Head {
+    padding: 0 8px;
+    align-items: center;
+    height: 50%;
+  }
+
   .NavbarItems {
     z-index: 999;
   }
