--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ html {
 
 .App {
   height: auto;
-  width: auto;
+  width: 100%;
   text-align: center;
   background-color: #000000;
   z-index: -999;
