--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -7,6 +7,7 @@
   padding-right: 20px;
   padding-left: 30px;
   padding-top: 25px;
+  overflow: hidden;
 }
 
 .about-content {
@@ -57,22 +58,26 @@
   opacity: 1;
   transform: translateX(0%);
   transition: all 1s;
+  overflow-x: hidden;
 }
 
 .hideRight {
   opacity: 0;
   transform: translateX(100%);
+  overflow-x: hidden;
 }
 
 .revealLeft {
   opacity: 1;
   transform: translateX(0%);
   transition: all 1s;
+  overflow-x: hidden;
 }
 
 .hideLeft {
   opacity: 0;
   transform: translateX(-100%);
+  overflow-x: hidden;
 }
 
 @media screen and (max-width: 750px) {
