--- a/src/components/locations/Locations.css
+++ b/src/components/locations/Locations.css
@@ -73,12 +73,45 @@
   }
 }
 
+.head {
+  background-color: #000000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 40px;
+  width: 100%;
+  height: 175px;
+  left: 50%;
+  zoom: 120%;
+}
+
+.headLogo {
+  color: #0095ff;
+  font-size: 2rem;
+  cursor: pointer;
+  border-color: #3a00f9;
+  margin-top: -115px;
+}
+.headNumber {
+  color: #fff;
+  font-size: 1.5rem;
+  cursor: pointer;
+  text-decoration: none;
+  margin-top: -115px;
+}
+
+/* Base styles for larger screens */
+.background-Main {
+  height: auto;
+  background-color: #000000;
+}
+
 .navbarItems {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
-  padding-top: 70px;
+  padding-top: 40px;
   width: 95%;
   height: 5px;
   position: absolute;
@@ -108,6 +141,7 @@
   align-items: center;
   color: #0095ff;
 }
+
 .navLinks {
   text-decoration: none;
   color: #ffffff;
@@ -126,11 +160,11 @@
 .icon-with-text {
   display: flex;
   align-items: center;
-  color: rgb(45, 121, 220); /* Center vertically */
+  color: rgb(45, 121, 220);
 }
 
 .icon-with-text i {
-  margin-right: 10px; /* Add spacing between icon and text */
+  margin-right: 10px;
 }
 
 .navLinks:hover {
@@ -155,4 +189,110 @@ button {
 .button:hover {
   background-color: #151516;
   color: #fff;
+}
+
+.content-container {
+  display: flex;
+  align-items: flex-start;
+  margin: 20px;
+  margin-top: 70px;
+  margin-left: 100px;
+  margin-right: 100px;
+  border-radius: 25px;
+}
+
+.image-container {
+  color: white;
+  flex: 1;
+  padding: 20px;
+  margin-left: 40px;
+  border-radius: 25px;
+}
+
+.image-container img {
+  width: 150%;
+  height: 150%;
+  border-radius: 25px;
+}
+
+.text-container {
+  color: #fff;
+  flex: 2;
+  padding: 20px;
+  background-color: #0095ff35;
+  border-radius: 25px;
+  margin-left: 50px;
+}
+
+.paragraph {
+  margin-bottom: 20px;
+}
+
+.bottom-paragraph {
+  margin: 20px;
+  color: #fff;
+  background-color: #0095ff35;
+  border-radius: 25px;
+}
+
+/* Media query for smaller screens (e.g., mobile) */
+@media (max-width: 850px) {
+  .background-Main {
+    height: auto;
+  }
+
+  .head {
+    padding: 0 8px;
+    align-items: center;
+  }
+
+  .headLogo {
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
+
+  .navbarItems {
+    padding-top: 50px;
+  }
+
+  .navbarLogo {
+    padding-top: 10px;
+  }
+
+  .navbarLogo img {
+    height: 30%;
+    width: 40%;
+    margin-left: -70px;
+  }
+
+  .navLinks {
+    font-size: 1.5rem;
+    padding: 0.5rem 0.8rem;
+    margin-right: -45px;
+  }
+
+  .navLinks i {
+    text-decoration: none;
+    color: #39baff;
+  }
+
+  .icon-with-text i {
+    margin-right: 5px;
+  }
+
+  .content-container {
+    margin-top: 0px;
+    margin-left: 20px;
+    margin-right: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .image-container {
+    margin-left: 0;
+    font-size: 15px;
+  }
+  .text-container {
+    margin-left: 0px;
+  }
 }
