--- a/src/components/locations/Locations.css
+++ b/src/components/locations/Locations.css
@@ -255,13 +255,14 @@ button {
   font-size: 1.5rem;
   color: #4b92c5;
   padding-left: 20px;
+  text-align: center;
 }
 
 .servText h2 {
   padding-bottom: 1rem;
   color: #0095ff;
   text-align: center;
-  width: 100%;
+  width: 98%;
   font-size: 2.5rem;
 }
 
@@ -340,6 +341,7 @@ button {
 
   .Services {
     margin: 4rem 2rem;
+    width: 92%;
   }
 
   .servText {
@@ -347,9 +349,9 @@ button {
   }
 
   .servText h2 {
-    width: 170%;
+    width: 100%;
     font-size: 2.1rem;
-    padding-right: 22.5rem;
-    padding-left: -2.5rem;
+    padding-right: 0rem;
+    text-align: center;
   }
 }
