--- a/src/components/locations/Locations.css
+++ b/src/components/locations/Locations.css
@@ -166,13 +166,13 @@
 }
 
 .icon-with-text i {
-  margin-right: 10px;
+  margin-right: 15px;
 }
 
 .navLinks:hover {
   background-color: #ffffff;
   color: #0095ff;
-  border-radius: 4px;
+  border-radius: 25px;
   transition: all 0.2s ease-in-out;
 }
 
@@ -304,17 +304,27 @@ button {
 
   .navLinks {
     font-size: 1.5rem;
-    padding: 0.5rem 0.8rem;
-    margin-right: -45px;
+    margin-right: -15px;
+    border-radius: 25px;
+    text-align: center;
   }
 
   .navLinks i {
     text-decoration: none;
     color: #39baff;
+    text-align: center;
+    padding-right: 5px;
   }
 
   .icon-with-text i {
-    margin-right: 5px;
+    margin-right: 0px;
+    text-align: center;
+    width: auto;
+  }
+
+  .icon-with-text h1 {
+    text-align: center;
+    width: 35px;
   }
 
   .content-container {
