--- a/src/components/reviews/Reviews.css
+++ b/src/components/reviews/Reviews.css
@@ -103,8 +103,9 @@
 }
 
 .star {
-  font-size: 1.2rem;
-  color: red;
+  font-size: 2.7rem;
+  color: rgb(255, 221, 0);
+  margin-left: 10px;
 }
 
 .review-details {
