--- a/src/components/navbar/NavbarStyles.css
+++ b/src/components/navbar/NavbarStyles.css
@@ -43,9 +43,9 @@
 }
 
 .navbar-logo img {
-  height: 40%;
-  width: 40%;
-  margin-left: -100px;
+  height: 23%;
+  width: 23%;
+  margin-left: -320px;
 }
 
 .nav-menu {
@@ -118,6 +118,12 @@ button {
     padding-right: 20px;
     padding-top: 20px;
     z-index: 1000;
+  }
+
+  .navbar-logo img {
+    height: 53%;
+    width: 53%;
+    margin-left: -100px;
   }
 
   .NavbarItems {
@@ -200,7 +206,7 @@ button {
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
 }
 
-@media screen and (min-width: 421px) and (max-width: 850px) {
+@media screen and (min-width: 420px) and (max-width: 750px) {
   .Head {
     padding: 0 8px;
     align-items: center;
@@ -223,7 +229,9 @@ button {
   .navbar-logo img {
     height: 50%;
     width: 60%;
+    margin-left: -100px;
   }
+
   .nav-menu {
     display: flex;
     flex-direction: column;
