--- a/src/components/footer/FooterStyles.css
+++ b/src/components/footer/FooterStyles.css
@@ -68,7 +68,7 @@
 
 @media screen and (max-width: 850px) {
   .footer {
-    padding: 15px 10px;
+    padding: 15px 25px;
   }
   .footer-content {
     flex-direction: row;
@@ -87,8 +87,51 @@
   }
 
   .social-links {
-    margin-top: 5px;
     gap: 10px;
+  }
+
+  .social-link {
+    font-size: 25px;
+  }
+
+  .powered-by {
+    flex: 1;
+    text-align: right;
+    margin-left: 20px;
+  }
+
+  .powered-logo {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+@media screen and (min-width: 851px) and (max-width: 1050px) {
+  .footer {
+    padding: 15px 25px;
+  }
+  .footer-content {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  .brand {
+    flex: 1;
+    text-align: left;
+    padding-right: 30px;
+  }
+
+  .brand-name {
+    font-size: 1rem;
+  }
+
+  .social-links {
+    gap: 10px;
+  }
+
+  .social-link {
+    font-size: 25px;
   }
 
   .powered-by {
