--- a/src/components/footer/FooterStyles.css
+++ b/src/components/footer/FooterStyles.css
@@ -68,7 +68,7 @@
 
 @media screen and (min-width: 350px) and (max-width: 400px) {
   .footer {
-    padding: 12px 18px;
+    padding: 3px 18px;
   }
 
   .footer-content {
@@ -81,6 +81,7 @@
     flex: 1;
     text-align: left;
     margin-right: 20px;
+    margin-top: 10px;
   }
 
   .brand-name {
@@ -106,6 +107,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    margin-top: 7px;
   }
 
   .powered-link {
@@ -124,7 +126,7 @@
 
 @media screen and (min-width: 401px) and (max-width: 850px) {
   .footer {
-    padding: 12px 18px;
+    padding: 3px 18px;
   }
 
   .footer-content {
@@ -137,6 +139,7 @@
     flex: 1;
     text-align: left;
     margin-right: 20px;
+    margin-top: 10px;
   }
 
   .brand-name {
@@ -162,6 +165,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    margin-top: 5px;
   }
 
   .powered-link {
