--- a/src/components/locations/Locations.css
+++ b/src/components/locations/Locations.css
@@ -298,8 +298,9 @@ button {
   }
 
   .headLogo {
-    font-size: 1.5rem;
+    font-size: 0.85rem;
     cursor: pointer;
+    text-decoration: none;
   }
 
   .navbarItems {
