--- a/src/components/locations/Locations.css
+++ b/src/components/locations/Locations.css
@@ -88,7 +88,7 @@
 
 .headLogo {
   color: #0095ff;
-  font-size: 1rem;
+  font-size: 2rem;
   cursor: pointer;
   border-color: #3a00f9;
   margin-top: 0px;
@@ -299,9 +299,12 @@ button {
   }
 
   .headLogo {
-    font-size: 0.5rem;
+    font-size: 0.8rem;
     cursor: pointer;
     text-decoration: none;
+  }
+  .headNumber {
+    font-size: 1rem;
   }
 
   .navbarItems {
@@ -424,7 +427,7 @@ button {
   }
 
   .headLogo {
-    font-size: 0.5rem;
+    font-size: 0.8rem;
     cursor: pointer;
     text-decoration: none;
   }
