--- a/src/components/locations/Locations.css
+++ b/src/components/locations/Locations.css
@@ -185,7 +185,7 @@
   transition: all 0.2s ease-in-out;
 }
 
-button {
+.button {
   padding: 0.5rem 1rem;
   white-space: nowrap;
   border-radius: 0.3rem;
@@ -251,7 +251,7 @@ button {
 }
 
 .Services {
-  margin: 0rem 2rem;
+  margin: 1.5rem 2rem;
   background-color: #000000;
   padding: 10px 20px 5px 20px;
   border-radius: 13px;
@@ -271,13 +271,11 @@ button {
   font-size: 1.5rem;
   color: #4b92c5;
   padding-left: 20px;
-  text-align: center;
 }
 
 .servText h2 {
   padding-bottom: 2rem;
   color: #0095ff;
-  text-align: center;
   width: 98%;
   font-size: 2.5rem;
 }
@@ -288,7 +286,7 @@ button {
 }
 
 /* Media query for smaller screens (e.g., mobile) */
-@media screen and (min-width: 601px) and (max-width: 850px) {
+@media screen and (min-width: 390px) and (max-width: 850px) {
   .background-Main {
     height: auto;
   }
@@ -375,27 +373,29 @@ button {
   }
 
   .Services {
-    margin: 0rem 2rem;
+    margin: 4rem 2rem;
     width: 92%;
   }
 
   .firstServ {
     display: flex;
     flex-direction: column-reverse;
+    text-align: center;
   }
   .servText {
     width: 100%;
+    text-align: center;
   }
 
   .servText h2 {
     width: 100%;
     font-size: 2.1rem;
-    padding-right: 0rem;
+
     text-align: center;
   }
 }
 
-@media screen and (min-width: 300px) and (max-width: 600px) {
+@media screen and (min-width: 300px) and (max-width: 380px) {
   .navbarItems {
     margin-bottom: 0px;
     height: 313px;
