--- a/src/components/navbar/NavbarStyles.css
+++ b/src/components/navbar/NavbarStyles.css
@@ -1,5 +1,6 @@
 @import "~@fortawesome/fontawesome-free/css/all.css";
 
+/* Head Section */
 .Head {
   background-color: #000000;
   display: flex;
@@ -11,18 +12,22 @@
   left: 50%;
   zoom: 120%;
 }
+
 .HeadLogo {
   color: #0095ff;
   font-size: 2rem;
   cursor: pointer;
   border-color: #3a00f9;
 }
+
 .HeadNumber {
   color: #fff;
   font-size: 1.5rem;
   cursor: pointer;
   text-decoration: none;
 }
+
+/* Navbar Section */
 .NavbarItems {
   display: flex;
   justify-content: space-between;
@@ -45,7 +50,7 @@
 .navbar-logo img {
   height: 23%;
   width: 23%;
-  margin-left: -320px;
+  margin-left: -220px;
 }
 
 .nav-menu {
@@ -56,6 +61,7 @@
   align-items: center;
   color: #0095ff;
 }
+
 .nav-links {
   text-decoration: none;
   color: #ffffff;
@@ -103,12 +109,14 @@ button {
   display: none;
 }
 
+/* Mobile and Responsive Design */
 @media screen and (max-width: 420px) {
   .Head {
     padding: 0 8px;
     align-items: center;
     height: 50px;
   }
+
   .HeadLogo {
     font-size: 1.2rem;
     cursor: pointer;
@@ -129,6 +137,7 @@ button {
   .NavbarItems {
     z-index: 999;
   }
+
   .nav-menu {
     display: flex;
     flex-direction: column;
@@ -160,6 +169,7 @@ button {
     font-size: 1.7rem;
     padding: 1rem 0;
   }
+
   .nav-links:hover {
     background: #000000;
     transition: none;
@@ -263,6 +273,7 @@ button {
     font-size: 1.7rem;
     padding: 2rem 0;
   }
+
   .nav-links:hover {
     background: #000000;
     transition: none;
@@ -287,6 +298,7 @@ button {
     display: block;
     cursor: pointer;
   }
+
   .menu-icons i {
     font-size: 4rem;
     color: #39baff;
